--- a/index.html
+++ b/index.html
@@ -1084,8 +1084,8 @@
                         <i class="fas fa-mosque"></i>
                     </div>
                     <div>
-                        <div class="logo-text">মাদ্রাসা হাজিরা</div>
-                        <div class="logo-subtext">মেহেরপুর আনছারুল উলূম</div>
+                        <div class="logo-text">ছাত্র-ছাত্রী হাজিরা</div>
+                        <div class="logo-subtext">মেহেরপুর আনছারুল উলূম আলিম মাদ্রাসা</div>
                     </div>
                 </a>
                 
@@ -5694,3 +5694,4 @@
     </script>
 </body>
 </html>
+
