--- a/index.html
+++ b/index.html
@@ -1118,8 +1118,8 @@
                         <i class="fas fa-mosque"></i>
                     </div>
                     <div>
-                        <div class="logo-text">মাদ্রাসা হাজিরা</div>
-                        <div class="logo-subtext">মেহেরপুর আনছারুল উলূম</div>
+                        <div class="logo-text">ছাত্র-ছাত্রী হাজিরা</div>
+                        <div class="logo-subtext">মেহেরপুর আনছারুল উলূম আলিম মাদ্রাসা</div>
                     </div>
                 </a>
                 
@@ -1174,7 +1174,7 @@
                                 </div>
                                 <div>
                                     <h1 class="text-2xl md:text-3xl font-bold text-gray-800 mb-1">ছাত্র-ছাত্রী হাজিরা ব্যবস্থাপনা</h1>
-                                    <p class="text-gray-600">মেহেরপুর আনছারুল উলূম আলিম মাদ্রাসা</p>
+                                    <p class="text-gray-600">মেহেরপুর আনছারুল উলূম আলিম মাদ্রাসা, গোলাপগঞ্জ, সিলেট</p>
                                 </div>
                             </div>
                             <div class="flex flex-wrap gap-2">
